# jacobi-concurrent-programming

./: .gitignore  CMakeLists.txt  PCAM.puml  README.md  analysis_ubuntu.ods  analysis_windows.xlsx  jacobi-richardson-parallel.txt  variables_influence.puml
jacobipar/: CMakeLists.txt  jacobipar.c  jacobipar.puml  variables_influence.puml
jacobiseq/: CMakeLists.txt  jacobiseq.c  jacobiseq.puml  random_par.c  random_par.h
python/: jacobipar.puml  jacobiseq.puml  main.py
time_ploter/: main.py
